--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jxd",
+  "name": "lzj",
   "version": "0.1.1",
   "description": "an example component library built with Reart",
   "main": "build/index.js",
