--- a/package.json
+++ b/package.json
@@ -3,11 +3,27 @@
   "version": "0.1.2",
   "description": "an example component library built with Reart",
   "main": "build/index.js",
+  "babel": {
+    "presets": [
+      "es2015",
+      "react"
+    ]
+  },
   "scripts": {
-    "build": "babel lib -d build",
-    "lint": "eslint lib/**; exit 0",
-    "lint:watch": "esw -w lib/**",
-    "prepublish": "npm run build"
+    "start": "yarn run storybook",
+    "build": "tsc",
+    "lerna": "lerna publish --registry=https://registry.npmjs.org/",
+    "lint": "tslint --project ./tsconfig.json",
+    "lint-fix": "tslint --project ./tsconfig.json --fix",
+    "test": "jest --coverage",
+    "update-snapshot": "jest -u",
+    "ci-test": "yarn lint && yarn test && yarn build-storybook",
+    "storybook": "start-storybook -s ./ -p 6006",
+    "build-storybook": "build-storybook",
+    "prepare": "yarn build",
+    "precommit": "yarn lint-fix",
+    "snapshot": "yarn test -u",
+    "lint-snapshot": "yarn lint-fix && yarn snapshot"
   },
   "repository": {
     "type": "git",
@@ -22,21 +38,74 @@
   "publishConfig": {
     "access": "public"
   },
+  "dependencies": {
+    "@sendgrid/style-guide-grid": "^0.3.0",
+    "@types/classnames": "^2.2.3",
+    "@types/react": "^16.0.27",
+    "@types/react-dom": "^16.0.3",
+    "@types/storybook__addon-actions": "^3.0.1",
+    "@types/storybook__react": "^3.0.5",
+    "classnames": "^2.2.5",
+    "lerna": "^2.9.0",
+    "lodash": "^4.17.4",
+    "raf": "^3.4.0",
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0"
+  },
   "devDependencies": {
-    "babel-cli": "^6.26.0",
-    "babel-core": "^6.26.3",
-    "babel-eslint": "^10.0.1",
-    "babel-preset-es2015": "^6.24.1",
-    "babel-preset-react": "^6.24.1",
-    "eslint": "^5.9.0",
-    "eslint-plugin-import": "^2.14.0",
-    "eslint-plugin-jsx-a11y": "^6.1.2",
-    "eslint-plugin-react": "^7.11.1",
-    "eslint-watch": "^4.0.2",
-    "polished": "^2.3.0",
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3",
-    "styled-components": "^4.1.1"
+    "@storybook/addon-storyshots": "^3.2.17",
+    "@storybook/react": "^3.2.17",
+    "@types/acorn": "^4.0.3",
+    "@types/chokidar": "^1.7.4",
+    "@types/enzyme": "^3.1.5",
+    "@types/jest": "^21.1.8",
+    "@types/lodash": "^4.14.92",
+    "@types/react-test-renderer": "^16.0.0",
+    "awesome-typescript-loader": "^3.4.1",
+    "change-case": "^3.0.2",
+    "css-loader": "^0.28.7",
+    "enzyme": "^3.2.0",
+    "enzyme-adapter-react-16": "^1.1.0",
+    "extract-text-webpack-plugin": "^3.0.2",
+    "glob": "^7.1.2",
+    "husky": "^0.14.3",
+    "jest": "^21.2.1",
+    "jest-cli": "^22.4.3",
+    "magic-string": "^0.22.4",
+    "node-sass": "^4.7.2",
+    "react-test-renderer": "^16.2.0",
+    "regenerator-runtime": "^0.11.1",
+    "rimraf": "^2.6.2",
+    "rollup": "^0.55.0",
+    "rollup-plugin-commonjs": "^8.2.6",
+    "rollup-plugin-json": "^2.3.0",
+    "rollup-plugin-node-resolve": "^3.0.2",
+    "rollup-plugin-postcss": "^1.4.0",
+    "rollup-plugin-typescript2": "^0.13.0",
+    "sass-loader": "^6.0.6",
+    "source-map": "^0.7.0",
+    "source-map-loader": "^0.2.3",
+    "style-loader": "^0.19.0",
+    "ts-jest": "^21.2.4",
+    "tslint": "^5.8.0",
+    "tslint-react": "^3.2.0",
+    "typescript": "^2.6.2",
+    "webpack": "^3.10.0"
+  },
+  "jest": {
+    "setupTestFrameworkScriptFile": "<rootDir>jestSetup.js",
+    "moduleFileExtensions": [
+      "ts",
+      "tsx",
+      "js",
+      "json"
+    ],
+    "transform": {
+      "\\.(ts|tsx)$": "<rootDir>/node_modules/ts-jest/preprocessor.js"
+    },
+    "testMatch": [
+      "**/*.test.(ts|tsx|js)"
+    ]
   }
 }
+
