--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "@types/lodash": "^4.14.92",
     "@types/react-test-renderer": "^16.0.0",
     "awesome-typescript-loader": "^3.4.1",
+    "babel-preset-es2015": "^6.24.1",
     "change-case": "^3.0.2",
     "css-loader": "^0.28.7",
     "enzyme": "^3.2.0",
@@ -108,4 +109,3 @@
     ]
   }
 }
-
