--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
 # Bundle
 dist
+/components
 storybookDist
 .rpt2_cache
 packages
@@ -7,7 +8,7 @@ packages
 test_image/__image_snapshots__/__diff_output__
 
 #package-lock
-package-lock.json*
+/package-lock.json*
 
 #Commiting our flow types because we want consistency across dev's and environments
 #flow-typed
