--- a/package.json
+++ b/package.json
@@ -45,12 +45,13 @@
     "@types/react-dom": "^16.0.3",
     "@types/storybook__addon-actions": "^3.0.1",
     "@types/storybook__react": "^3.0.5",
-    "classnames": "^2.2.5",
+    "classnames": "^2.2.6",
     "lerna": "^2.9.0",
     "lodash": "^4.17.4",
     "raf": "^3.4.0",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "typings-for-css-modules-loader": "^1.7.0"
   },
   "devDependencies": {
     "@storybook/addon-storyshots": "^3.2.17",
