--- a/package.json
+++ b/package.json
@@ -11,11 +11,11 @@
   },
   "scripts": {
     "start": "yarn run storybook",
-    "build": "tsc",
+    "build": "webpack -p",
     "lerna": "lerna publish --registry=https://registry.npmjs.org/",
     "lint": "tslint --project ./tsconfig.json",
     "lint-fix": "tslint --project ./tsconfig.json --fix",
-    "test": "jest --coverage",
+    "test": "karma start",
     "update-snapshot": "jest -u",
     "ci-test": "yarn lint && yarn test && yarn build-storybook",
     "storybook": "start-storybook -s ./ -p 6006",
@@ -23,7 +23,8 @@
     "prepare": "yarn build",
     "precommit": "yarn lint-fix",
     "snapshot": "yarn test -u",
-    "lint-snapshot": "yarn lint-fix && yarn snapshot"
+    "lint-snapshot": "yarn lint-fix && yarn snapshot",
+    "dev": "webpack-dev-server --inline --hot"
   },
   "repository": {
     "type": "git",
@@ -39,6 +40,11 @@
     "access": "public"
   },
   "dependencies": {
+    "@babel/plugin-transform-modules-commonjs": "^7.0.0-beta.42",
+    "@babel/polyfill": "^7.0.0-beta.42",
+    "@babel/preset-env": "^7.0.0-beta.42",
+    "@babel/preset-react": "^7.0.0-beta.42",
+    "@babel/preset-typescript": "^7.0.0-beta.42",
     "@sendgrid/style-guide-grid": "^0.3.0",
     "@types/classnames": "^2.2.3",
     "@types/react": "^16.0.27",
@@ -46,6 +52,7 @@
     "@types/storybook__addon-actions": "^3.0.1",
     "@types/storybook__react": "^3.0.5",
     "classnames": "^2.2.6",
+    "extract-css-chunks-webpack-plugin": "2.0.18",
     "lerna": "^2.9.0",
     "lodash": "^4.17.4",
     "raf": "^3.4.0",
@@ -54,15 +61,19 @@
     "typings-for-css-modules-loader": "^1.7.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.2.2",
     "@storybook/addon-storyshots": "^3.2.17",
     "@storybook/react": "^3.2.17",
     "@types/acorn": "^4.0.3",
     "@types/chokidar": "^1.7.4",
     "@types/enzyme": "^3.1.5",
+    "@types/jasmine": "^3.3.5",
     "@types/jest": "^21.1.8",
     "@types/lodash": "^4.14.92",
     "@types/react-test-renderer": "^16.0.0",
     "awesome-typescript-loader": "^3.4.1",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-jest": "^23.6.0",
     "babel-preset-es2015": "^6.24.1",
     "change-case": "^3.0.2",
     "css-loader": "^0.28.11",
@@ -71,12 +82,16 @@
     "extract-text-webpack-plugin": "^3.0.2",
     "glob": "^7.1.2",
     "husky": "^0.14.3",
+    "jasmine-core": "^3.3.0",
     "jest": "^21.2.1",
     "jest-cli": "^22.4.3",
+    "karma": "^3.1.4",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-jasmine": "^2.0.1",
+    "karma-webpack": "^3.0.5",
     "magic-string": "^0.22.4",
     "node-sass": "^4.11.0",
     "react-test-renderer": "^16.2.0",
-    "regenerator-runtime": "^0.11.1",
     "rimraf": "^2.6.2",
     "rollup": "^0.55.0",
     "rollup-plugin-commonjs": "^8.2.6",
@@ -89,10 +104,13 @@
     "source-map-loader": "^0.2.3",
     "style-loader": "^0.19.1",
     "ts-jest": "^21.2.4",
-    "tslint": "^5.8.0",
-    "tslint-react": "^3.2.0",
-    "typescript": "^3.1.0",
-    "webpack": "^3.10.0"
+    "ts-loader": "^3.5.0",
+    "tslint": "5.9.1",
+    "tslint-loader": "3.6.0",
+    "tslint-react": "3.5.1",
+    "typescript": "^3.2.2",
+    "webpack": "^3.12.0",
+    "webpack-dev-server": "^3.1.14"
   },
   "jest": {
     "setupTestFrameworkScriptFile": "<rootDir>jestSetup.js",
